--- a/lab-tools-prompting_old.ipynb
+++ b/lab-tools-prompting_old.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install --upgrade --quiet langchain langchain-community"
+    "%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "20.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -229,19 +229,6 @@
     "\n",
     "The `arguments` should be a dictionary, with keys corresponding \n",
     "to the argument names and the values corresponding to the requested values.\n",
-    "\n",
-    "Here are some examples:\n",
-    "\n",
-    "Input: \"What is 3 plus 5?\"\n",
-    "Output: name\": \"add\", \"arguments\": \"x\": 3, \"y\": 5\n",
-    "\n",
-    "Input: \"What is 7 times 8?\"\n",
-    "Output: \"name\": \"multiply\", \"arguments\": \"x\": 7, \"y\": 8\n",
-    "\n",
-    "Input: \"Can you calculate 2.5 times 10?\"\n",
-    "Output: \"name\": \"multiply\", \"arguments\": \"x\": 2.5, \"y\": 10\n",
-    "\n",
-    "Now, handle the following input:\n",
     "\"\"\"\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -251,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -259,15 +246,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "```json\n",
       "{\n",
-      "  \"name\": \"add\",\n",
-      "  \"arguments\": {\n",
-      "    \"x\": 3,\n",
-      "    \"y\": 1132\n",
-      "  }\n",
-      "}\n",
-      "```\n"
+      "    \"name\": \"add\",\n",
+      "    \"arguments\": {\n",
+      "        \"x\": 3,\n",
+      "        \"y\": 1132\n",
+      "    }\n",
+      "}\n"
      ]
     }
    ],
@@ -295,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
+       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -393,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -403,7 +388,7 @@
        "15.0"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -434,7 +419,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -468,7 +453,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "week7_reset",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
