--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "!pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -89,14 +89,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
+   "id": "a19cf339",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain-ollama in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (0.2.2)\n",
+      "Requirement already satisfied: langchain-core<0.4.0,>=0.3.27 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-ollama) (0.3.31)\n",
+      "Requirement already satisfied: ollama<1,>=0.4.4 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-ollama) (0.4.7)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (6.0.2)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (1.33)\n",
+      "Requirement already satisfied: langsmith<0.4,>=0.1.125 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (0.3.1)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (24.2)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.5.2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (2.10.6)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (9.0.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langchain-core<0.4.0,>=0.3.27->langchain-ollama) (4.12.2)\n",
+      "Requirement already satisfied: httpx<0.29,>=0.27 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from ollama<1,>=0.4.4->langchain-ollama) (0.27.2)\n",
+      "Requirement already satisfied: anyio in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (4.6.2.post1)\n",
+      "Requirement already satisfied: certifi in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (2024.8.30)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (1.0.7)\n",
+      "Requirement already satisfied: idna in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (3.10)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (1.3.1)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from httpcore==1.*->httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (0.14.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (3.0.0)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (3.10.15)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (2.32.3)\n",
+      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (1.0.0)\n",
+      "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (0.23.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.27.2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from pydantic<3.0.0,>=2.5.2->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (2.27.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from requests<3,>=2->langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (3.4.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from requests<3,>=2->langsmith<0.4,>=0.1.125->langchain-core<0.4.0,>=0.3.27->langchain-ollama) (2.2.3)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in c:\\users\\pbele\\anaconda3\\envs\\transformers_env\\lib\\site-packages (from anyio->httpx<0.29,>=0.27->ollama<1,>=0.4.4->langchain-ollama) (1.2.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade langchain-ollama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain_ollama import OllamaLLM\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = OllamaLLM(model=\"mistral\")"
    ]
   },
   {
@@ -213,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -246,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
+      " {\n",
       "    \"name\": \"add\",\n",
       "    \"arguments\": {\n",
       "        \"x\": 3,\n",
@@ -280,17 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +432,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +463,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +497,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "transformers_env",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
