--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -97,10 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rfria\\AppData\\Local\\Temp\\ipykernel_7452\\4212713475.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  model = Ollama(model=\"llama2\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -153,6 +162,10 @@
     "    \"Add two numbers.\"\n",
     "    return x + y\n",
     "\n",
+    "@tool\n",
+    "def divide(x: int, y: int) -> int:\n",
+    "    \"Divide two numbers.\"\n",
+    "    return x / y\n",
     "\n",
     "tools = [multiply, add]\n",
     "\n",
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -176,7 +189,7 @@
        "20.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -221,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -288,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
@@ -298,7 +311,7 @@
        "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -386,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -396,7 +409,7 @@
        "15.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -427,7 +440,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -461,7 +474,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
